// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Fields Test: got three values 1`] = `
<div
  class="array"
>
  {
  "field": {
    "mapTo": "myArray",
    "type": 10,
    "validate": {
      "type": 2
    }
  },
  "value": [
    ",",
    ",asdf ",
    "asdf"
  ]
}
</div>
`;

exports[`Basic Fields Test: increased size to four 1`] = `
<div
  class="array"
>
  {
  "field": {
    "mapTo": "myArray",
    "type": 10,
    "validate": {
      "type": 2
    }
  },
  "value": [
    ",",
    ",asdf ",
    "asdf",
    null
  ]
}
</div>
`;

exports[`Basic Fields Test: increased size to four By inserting at 2 1`] = `
<div
  class="array"
>
  {
  "field": {
    "mapTo": "myArray",
    "type": 10,
    "validate": {
      "type": 2
    }
  },
  "value": [
    ",",
    ",asdf ",
    null,
    "asdf"
  ]
}
</div>
`;

exports[`Basic Fields Test: removed Index one item 1`] = `
<div
  class="array"
>
  {
  "field": {
    "mapTo": "myArray",
    "type": 10,
    "validate": {
      "type": 2
    }
  },
  "value": [
    ",",
    "asdf"
  ]
}
</div>
`;

exports[`Basic Fields Test: removed Index zero item 1`] = `
<div
  class="array"
>
  {
  "field": {
    "mapTo": "myArray",
    "type": 10,
    "validate": {
      "type": 2
    }
  },
  "value": [
    "asdf"
  ]
}
</div>
`;

exports[`Basic Fields Test: removed second item 1`] = `
<div
  class="array"
>
  {
  "field": {
    "mapTo": "myArray",
    "type": 10,
    "validate": {
      "type": 2
    }
  },
  "value": [
    ",",
    ",asdf ",
    null
  ]
}
</div>
`;

exports[`Basic Fields Test: unchanged render 1`] = `
<div
  class="array"
>
  {
  "field": {
    "mapTo": "myArray",
    "type": 10,
    "validate": {
      "type": 2
    }
  }
}
</div>
`;
